--- a/ch09/src/main/webapp/WEB-INF/web.xml
+++ b/ch09/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,24 @@
   	<url-pattern>/welcome.do</url-pattern>
   </servlet-mapping>
   
+  <!-- 필터 등록/주소 매핑 -->
+  <filter>
+  	<filter-name>FilterA</filter-name>
+  	<filter-class>sub2.FilterA</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>FilterA</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+  	<filter-name>FilterB</filter-name>
+  	<filter-class>sub2.FilterB</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>FilterB</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   
 </web-app>
