--- a/ch09/src/main/webapp/WEB-INF/web.xml
+++ b/ch09/src/main/webapp/WEB-INF/web.xml
@@ -45,9 +45,14 @@
   </filter>
   <filter-mapping>
   	<filter-name>FilterB</filter-name>
-  	<url-pattern>/*</url-pattern>
+  	<url-pattern>/hello.do</url-pattern>
+  	<url-pattern>/welcome.do</url-pattern>
   </filter-mapping>
   
+  <!-- 리스너 등록 -->
+  <listener>
+  	<listener-class>sub3.MyContextListener</listener-class>
+  </listener>
   
 </web-app>
 
