--- a/ch09/src/main/webapp/WEB-INF/web.xml
+++ b/ch09/src/main/webapp/WEB-INF/web.xml
@@ -45,8 +45,7 @@
   </filter>
   <filter-mapping>
   	<filter-name>FilterB</filter-name>
-  	<url-pattern>/hello.do</url-pattern>
-  	<url-pattern>/welcome.do</url-pattern>
+  	<url-pattern>/*</url-pattern>
   </filter-mapping>
   
   <!-- 리스너 등록 -->
