--- a/ch10/src/main/webapp/WEB-INF/web.xml
+++ b/ch10/src/main/webapp/WEB-INF/web.xml
@@ -30,5 +30,32 @@
   	</web-resource-collection>
   </security-constraint>
   
+  <!-- 인코딩 필터 등록 -->
+  <filter>
+  	<filter-name>SetCharacterEncodingFilter</filter-name>
+  	<filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+  	<init-param>
+  		<param-name>encoding</param-name>
+  		<param-value>UTF-8</param-value>  		
+  	</init-param>
+  </filter>
+  
+  
+  
+  
+  
   
 </web-app>
+
+
+
+
+
+
+
+
+
+
+
+
+
