--- a/ch10/src/main/webapp/WEB-INF/web.xml
+++ b/ch10/src/main/webapp/WEB-INF/web.xml
@@ -40,10 +40,10 @@
   	</init-param>
   </filter>
   
-  
-  
-  
-  
+  <filter-mapping>
+  	<filter-name>SetCharacterEncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
 </web-app>
 
